--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,13 +2,13 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='Maple Mono NF CN' style=Regular
-bold_font           family='Maple Mono NF CN' style=SemiBold
+font_family         family='Maple Mono NF CN' style=Medium
+bold_font           family='Maple Mono NF CN' style=Bold
 font_size 14
-dim_opacity 0.82
+dim_opacity 0.85
 
 modify_font cell_width 90%
-modify_font cell_height 5px
+modify_font cell_height 0px
 
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
 cursor_shape block
@@ -95,7 +95,8 @@ map cmd+ctrl+= resize_window taller 5
 map cmd+ctrl+- resize_window shorter 5
 map cmd+m toggle_layout stack
 # search
-map cmd+f show_scrollback
+# map cmd+f show_scrollback
+map cmd+f send_text all \x06c
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+; kitten grab/grab.py
 
