--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -90,7 +90,7 @@ bind-key - splitw -v -c "#{pane_current_path}"
 bind-key c copy-mode
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi C-v send -X rectangle-toggle
-bind-key -T copy-mode-vi y send -X copy-pipe
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel
 bind-key -T copy-mode-vi u send-keys -X halfpage-up
 bind-key -T copy-mode-vi d send-keys -X halfpage-down
 
